--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@ object-position: 50% 30%;
 
                             <div class="hero-media-inner">
 
-                                <video controls="" src="images/film.mp4" alt="Vorstellungsvideo"></video>
+                                <video controls="" src="images/film_compressed.mp4" alt="Vorstellungsvideo"></video>
 
                                 <div class="hero-media-overlay" style="opacity: 1; pointer-events: auto;">
 
@@ -1398,7 +1398,7 @@ object-position: 50% 30%;
 </style>
 
 <div class="hero-media-inner">
-  <video controls="" playsinline="" preload="metadata" class="w-full rounded-[3rem]" src="images/film.mp4" aria-label="Vorstellungsvideo"></video>
+  <video controls="" playsinline="" preload="metadata" class="w-full rounded-[3rem]" src="images/film_compressed.mp4" aria-label="Vorstellungsvideo"></video>
 
   <div class="hero-media-overlay">
     <div class="hero-play-button">
