--- a/index.html
+++ b/index.html
@@ -1539,16 +1539,16 @@ Eure Sonja
             <div class="glass-effect rounded-[2.5rem] p-8 space-y-5">
                 <h5 class="text-xl font-medium text-dark-beige">Hörprobe 1</h5>
                 <audio controls="" preload="metadata" class="w-full rounded-2xl bg-white/80 border border-white/30 shadow-lg focus:outline-none focus:ring-2 focus:ring-accent-blue/40">
-                    <source src="images/ninachristian.m4a" type="audio/mpeg">
-                    <source src="images/ninachristian.ogg" type="audio/ogg">
+                    <source src="images/StefanieAlexander.m4a" type="audio/mpeg">
+                    <source src="images/StefanieAlexander.ogg" type="audio/ogg">
                     Dein Browser unterstützt das Audio-Element nicht.
                 </audio>
             </div>
             <div class="glass-effect rounded-[2.5rem] p-8 space-y-5">
                 <h5 class="text-xl font-medium text-dark-beige">Hörprobe 2</h5>
                 <audio controls="" preload="metadata" class="w-full rounded-2xl bg-white/80 border border-white/30 shadow-lg focus:outline-none focus:ring-2 focus:ring-accent-blue/40">
-                    <source src="images/StefanieAlexander.m4a" type="audio/mpeg">
-                    <source src="images/StefanieAlexander.ogg" type="audio/ogg">
+                     <source src="images/ninachristian.m4a" type="audio/mpeg">
+                    <source src="images/ninachristian.ogg" type="audio/ogg">
                     Dein Browser unterstützt das Audio-Element nicht.
                 </audio>
             </div>
@@ -1771,8 +1771,8 @@ Lasst uns gemeinsam diesen besonderen Tag gestalten und eure Liebe feiern.
                 <h2 class="text-3xl md:text-4xl font-light text-gradient">Ihr seid neugierig geworden? </h2>
 
                 <p class="text-lg md:text-xl text-gray-700 leading-relaxed max-w-3xl mx-auto">Meldet euch gerne bei mir für ein unverbindliches Kennenlernen. <br> Ich freue mich auf euch! <br><br>
-                Mobil: 0699/19003525 <br>
-Standort: 8292 Neudau, Steiermark 
+                <strong>Mobil:</strong> 0699/19003525 <br>
+<strong>Standort:</strong> 8292 Neudau, Steiermark 
 </p>
 
                 <div>
@@ -1809,7 +1809,7 @@ Standort: 8292 Neudau, Steiermark
 
                 <div class="impressions-slides-container overflow-hidden rounded-[3rem]">
 
-                    <div class="impressions-slides flex transition-transform duration-700 ease-in-out" style="transform: translateX(-100%);">
+                    <div class="impressions-slides flex transition-transform duration-700 ease-in-out" style="transform: translateX(0%);">
 
                         <div class="impressions-slide w-full md:w-1/3 flex-shrink-0 p-2 md:p-4" style="flex: 0 0 33.3333%;">
 
@@ -1992,7 +1992,7 @@ Standort: 8292 Neudau, Steiermark
 
                 <!-- Carousel Dots -->
 
-                <div class="impressions-carousel-dots flex justify-center gap-3 mt-8"><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 active bg-accent-blue"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div></div>
+                <div class="impressions-carousel-dots flex justify-center gap-3 mt-8"><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 active bg-accent-blue"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div></div>
 
             </div>
 
@@ -2008,7 +2008,7 @@ Standort: 8292 Neudau, Steiermark
 
                 <div class="reviews-slides-container overflow-hidden">
 
-                    <div class="reviews-slides flex transition-transform duration-700 ease-in-out" style="transform: translateX(-100%);">
+                    <div class="reviews-slides flex transition-transform duration-700 ease-in-out" style="transform: translateX(0%);">
 
                         <div class="reviews-slide w-full md:w-1/2 lg:w-1/3 flex-shrink-0 p-2 md:p-4" style="flex: 0 0 33.3333%;">
 
@@ -2350,7 +2350,7 @@ Standort: 8292 Neudau, Steiermark
 
                     <!-- Carousel Dots -->
 
-                    <div class="reviews-carousel-dots flex justify-center gap-3 mt-8"><div class="reviews-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="reviews-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 active bg-accent-blue"></div></div>
+                    <div class="reviews-carousel-dots flex justify-center gap-3 mt-8"><div class="reviews-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 active bg-accent-blue"></div><div class="reviews-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div></div>
 
                 </div>
 
@@ -2390,21 +2390,21 @@ Standort: 8292 Neudau, Steiermark
 
                     <div class="space-y-5 text-gray-700 text-lg leading-relaxed">
 
-                        <p class="text-xs tracking-[0.4em] uppercase text-accent-blue">Freie Traurednerin</p>
+                        <p class="text-l tracking-[0.4em] uppercase text-accent-blue">Wieso ich freie Traurednerin geworden bin?</p>
 
-                        <h2 class="text-4xl md:text-5xl font-light text-gradient">Hey, ich bin Sonja</h2>
+                        <p>
+Hauptberuflich arbeite ich als Standesbeamtin und durfte bereits einigen Paaren auf ihrem Weg ins gemeinsame Leben begleiten. <br> 
+Jedes „Ja“-Wort, jedes Lächeln und jede persönliche Geschichte hat in mir den Wunsch erweckt, diesen Momenten noch mehr Raum zu geben. So habe ich den Entschluss gefasst, meinen eigenen Weg zu gehen- als freie Traurednerin, die jedes Paar feiert, wie es wirklich ist.  Als kleines Mädchen habe ich mir immer meine eigene Traumhochzeit ausgemalt und als freie Traurednerin ist es mir möglich nicht nur eine sondern viele Traumhochzeiten erleben und mitgestalten zu dürfen.   
+<br>
 
-                        <p>Seit vielen Jahren begleite ich Paare auf dem Weg zu ihrer freien Trauung und erzaehle dabei
+                        </p><p class="text-l tracking-[0.4em] uppercase text-accent-blue">Und wie schaut meine Freizeit aus?</p>
+ 
+  <br>
 
-                            Geschichten, die zu Herzen gehen. Mit liebevollen Worten, Humor und einer Prise Gaensehaut
-
-                            erschaffe ich Zeremonien, die sich echt anfuehlen und euch widerspiegeln.</p>
-
-                        <p>Mir ist wichtig, dass ihr euch von Anfang an wohl und verstanden fuehlt. In intensiven
-
-                            Gespraechen lerne ich eure Geschichte kennen und forme daraus eine Traurede, die eure
-
-                            Persoenlichkeit strahlen laesst â individuell, warmherzig und mit viel Liebe zum Detail.</p>
+Ich lebe in der wunderschönen Oststeiermark, gemeinsam mit meinem Ehemann, meinem Hund, meinen Katzen und meinen Hühnern. Am liebsten verbringe ich meine Freizeit in der Natur. Das ist mein Ort, um Energie zu tanken und die Seele baumeln zu lassen.  <br>
+Wenn ich gerade nicht Trauungen gestalte, findest du mich wahrscheinlich singend mit meiner Gitarre in der Hand und wer weiß, vielleicht auch einmal auf deiner Hochzeit.  <br>
+Ich bin sehr kreativ, stets auf der Suche neues auszuprobieren und mich von spontanen Ideen treiben zu lassen.  <br>
+Ich liebe das Leben und genieße die kleinen und großen Momente, die es so spürbar machen. <p></p>
 
                     </div>
 
@@ -2430,7 +2430,9 @@ Standort: 8292 Neudau, Steiermark
 
                             <div class="text-5xl font-light text-gradient mb-2">∞</div>
 
-                            <p class="text-sm font-medium text-gray-600 uppercase tracking-[0.2em]">Ideen</p>
+                            <p class="text-sm font-medium text-gray-600 uppercase tracking-[0.2em]" style="
+    margin-top: -0.8vh;
+">Ideen</p>
 
                         </div>
 
@@ -2518,7 +2520,7 @@ Standort: 8292 Neudau, Steiermark
 
                     <h3 class="text-2xl font-light text-gradient mb-8 text-center">Nachricht senden</h3>
 
-                    <form id="contactForm" class="space-y-6" action="send-mail.php" method="post">
+                    <form id="contactForm" class="space-y-6" action="config/send-mail.php" method="post">
 
                         <div class="grid md:grid-cols-2 gap-6">
 
@@ -2614,7 +2616,7 @@ Standort: 8292 Neudau, Steiermark
 
                 try {
 
-                    const response = await fetch('send-mail.php', {
+                    const response = await fetch('config/send-mail.php', {
 
                         method: 'POST',
 
@@ -3519,7 +3521,7 @@ E-Mail: email@email.at</p>
 
     </script>
 
-    <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'98dfa9ea72e45ab9',t:'MTc2MDM2NzE3Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe>
+    <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'98dfa9ea72e45ab9',t:'MTc2MDM2NzE3Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe>
 
     <iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe>
 
