--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
 
 </head>
 
-<body class="font-inter bg-cream" style="overflow: auto;">
+<body class="font-inter bg-cream" style="overflow: hidden;">
 
     <!-- Bokeh Background -->
 
@@ -1160,12 +1160,12 @@
 
                     </div>
 
-                </div><div class="flex items-center group cursor-pointer mobile-only" onclick="scrollToTop()" style="
-    margin-left: 29%;
+                </div><div class="flex items-center cursor-pointer mobile-only" onclick="scrollToTop()" style="
+    margin-left: 4%;
 ">
 
-                    <div class="rounded-2xl flex items-center justify-center overflow-hidden transition-transform duration-500 group-hover:scale-105" style="
-    height: 6rem;
+                    <div class="md:w-16 md:h-16 rounded-2xl flex items-center justify-center overflow-hidden transition-transform duration-500 group-hover:scale-105" style="
+    height: 5rem;
 ">
 
                         <img src="images/Wortglanz.png" alt="Herz Icon" class="w-full h-full object-contain">
@@ -1817,7 +1817,7 @@ Lasst uns gemeinsam diesen besonderen Tag gestalten und eure Liebe feiern.
 
                 <div class="impressions-slides-container overflow-hidden rounded-[3rem]">
 
-                    <div class="impressions-slides flex transition-transform duration-700 ease-in-out" style="transform: translateX(-100%);">
+                    <div class="impressions-slides flex transition-transform duration-700 ease-in-out" style="transform: translateX(-500%);">
 
                         <div class="impressions-slide w-full md:w-1/3 flex-shrink-0 p-2 md:p-4" style="flex: 0 0 100%;">
 
@@ -2000,7 +2000,7 @@ Lasst uns gemeinsam diesen besonderen Tag gestalten und eure Liebe feiern.
 
                 <!-- Carousel Dots -->
 
-                <div class="impressions-carousel-dots flex justify-center gap-3 mt-8"><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 active bg-accent-blue"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div></div>
+                <div class="impressions-carousel-dots flex justify-center gap-3 mt-8"><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 active bg-accent-blue"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div><div class="impressions-carousel-dot w-3 h-3 rounded-full cursor-pointer transition-all duration-300 hover:bg-accent-blue/50 bg-gray-300"></div></div>
 
             </div>
 
@@ -2569,7 +2569,7 @@ Ich liebe das Leben und genieße die kleinen und großen Momente, die es so spü
       </div>
      </div><!-- Partner 2 -->
      <div class="glass-effect rounded-3xl hover-lift group">
-      <div class="aspect-square flex items-center justify-center"><img src="images/BildmacherinFotografie.jpg" alt="Partner Bildmacherin Fotografie" class="max-w-full max-h-full object-contain filter grayscale group-hover:grayscale-0 transition-all duration-500" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+      <div class="aspect-square flex items-center justify-center"><img src="images/BildmacherinFotografie.jpg" alt="Partner Bildmacherin Fotografie" class="max-w-full max-h-full object-contain filter grayscale group-hover:grayscale-0 transition-all duration-500" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" style="display: none;">
        <div class="w-full h-full bg-gradient-to-br from-accent-blue/20 to-accent-blue/10 rounded-2xl flex items-center justify-center" style="display: flex;">
        </div>
       </div>
@@ -3551,6 +3551,6 @@ E-Mail: email@email.at</p>
     <iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe>
 
 
-<protonpass-root-3a77 data-protonpass-role="root" data-protonpass-theme="os"></protonpass-root-3a77>
+
 
 </body></html>
