--- a/index.html
+++ b/index.html
@@ -2569,7 +2569,7 @@ Ich liebe das Leben und genieße die kleinen und großen Momente, die es so spü
       </div>
      </div><!-- Partner 2 -->
      <div class="glass-effect rounded-3xl hover-lift group">
-      <div class="aspect-square flex items-center justify-center"><img src="images/BildmacherinFotografie.jpg" alt="Partner Bildmacherin Fotografie" class="max-w-full max-h-full object-contain filter grayscale group-hover:grayscale-0 transition-all duration-500" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" style="display: none;">
+      <div class="aspect-square flex items-center justify-center"><img src="images/BildmacherinFotografie.jpg" alt="Partner Bildmacherin Fotografie" class="max-w-full max-h-full object-contain filter grayscale group-hover:grayscale-0 transition-all duration-500" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
        <div class="w-full h-full bg-gradient-to-br from-accent-blue/20 to-accent-blue/10 rounded-2xl flex items-center justify-center" style="display: flex;">
        </div>
       </div>
