--- a/index.html
+++ b/index.html
@@ -2352,7 +2352,7 @@ Lasst uns gemeinsam diesen besonderen Tag gestalten und eure Liebe feiern.
 }
 .text-aboutme-overlay {
     position: absolute;
-    top: 11%;
+    top: 12%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 34px;
@@ -2369,7 +2369,8 @@ Lasst uns gemeinsam diesen besonderen Tag gestalten und eure Liebe feiern.
 
                     <div class="rounded-[3rem] overflow-hidden shadow-2xl border border-white/60 bg-white relative image-aboutme-container">
 
-                        <img src="images\Screenshot_20240822_194145_Chrome.jpg" alt="Sonja Zach haelt eine Traurede" class="w-full h-full object-cover">
+                        <img src="images\Screenshot_20240822_194145_Chrome-quer.jpg" alt="Sonja Zach haelt eine Traurede" class="w-full h-full object-cover mobile-only">
+                        <img src="images\Screenshot_20240822_194145_Chrome.jpg" alt="Sonja Zach haelt eine Traurede" class="w-full h-full object-cover desktop-only">
 
                         <div class="absolute inset-0 bg-gradient-to-t from-black/15 via-transparent to-white/5"></div>
 <div class="text-aboutme-overlay  font-light text-gradient text-center">
